@@ -91,7 +91,7 @@
 </div>
 <div id="container3">
     <div id="mvp">
-        <p class="identifier">Game recap</p>
+        <p class="identifier">In-Depth Statistics</p>
         <center>
             <div id="inningsDisplayed"></div>
             <div id="miscstats"></div>
@@ -121,6 +121,6 @@
     </div>
 </div>
 
-<p id="version">v0.1.4.2</p>
+<p id="version">v0.1.4.3</p>
 
 <script src="./script.js"></script>
