@@ -19,6 +19,9 @@ h2 {
     padding-left: 30px;
     font-size: 20px;
 }
+.innings {
+    font-size: 26px;
+}
 #scoreboard {
     background-color: #212121;
     width: 40%;
